tests/error/misc_errors/wasm_func_without_module.err
Error: WASM signature error (at $FILE:9:0)
  | 
7 | 
8 | @wasm
9 | def foo(x: int) -> None: ...
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ First argument to WASM function should be a reference to a
  |                              WASM module. Found `int` instead

Guppy compilation failed due to 1 previous error
